<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="RobotPose" Id="{8acee726-7633-4cd0-abd1-ae09009eb4c5}">
    <Declaration><![CDATA[TYPE RobotPose EXTENDS RobotPoseSimple: 
STRUCT
	e : LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>